--- a/ShoppingList/ShoppingList.csproj
+++ b/ShoppingList/ShoppingList.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Handlers\RelayCommand.cs" />
+    <Compile Include="Handlers\SearchHandler.cs" />
     <Compile Include="Model\ProductModel.cs" />
     <Compile Include="Model\ShoppingListCatalog.cs" />
     <Compile Include="Persistancy\PersistancyService.cs" />
