--- a/ShoppingList/ShoppingList.csproj
+++ b/ShoppingList/ShoppingList.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Handlers\SearchHandler.cs" />
     <Compile Include="Model\ProductModel.cs" />
     <Compile Include="Model\ShoppingListModel.cs" />
+    <Compile Include="Model\ShoppingListSingleton.cs" />
     <Compile Include="Persistancy\PersistancyService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\ViewModel.cs" />
