--- a/ShoppingList/ShoppingList.csproj
+++ b/ShoppingList/ShoppingList.csproj
@@ -124,9 +124,13 @@
     <Compile Include="Model\ProductModel.cs" />
     <Compile Include="Model\ShoppingListModel.cs" />
     <Compile Include="Model\ShoppingListSingleton.cs" />
+    <Compile Include="Model\Vare.cs" />
     <Compile Include="Persistancy\PersistancyService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\ViewModel.cs" />
+    <Compile Include="View\CreateItem.xaml.cs">
+      <DependentUpon>CreateItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\CreateShoppingList.xaml.cs">
       <DependentUpon>CreateShoppingList.xaml</DependentUpon>
     </Compile>
@@ -165,6 +169,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Page Include="View\CreateItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\CreateShoppingList.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
