--- a/ShoppingList/ShoppingList.csproj
+++ b/ShoppingList/ShoppingList.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Model\ShoppingListModel.cs" />
     <Compile Include="Model\ShoppingListSingleton.cs" />
     <Compile Include="Persistancy\PersistancyService.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\ViewModel.cs" />
     <Compile Include="View\CreateShoppingList.xaml.cs">
